# libmagic

./: CMakeLists.txt  Makefile.am  autogen.sh
cmake/: Config.cmake.in
src/: Makefile.am
